--- a/Hawk.ETL.Controls/SmartCrawlerUI.xaml
+++ b/Hawk.ETL.Controls/SmartCrawlerUI.xaml
@@ -4,9 +4,23 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:wpfPropertyGrid="clr-namespace:System.Windows.Controls.WpfPropertyGrid;assembly=System.Windows.Controls.WpfPropertyGrid"
+             xmlns:attributes="clr-namespace:System.Windows.Controls.WpfPropertyGrid.Attributes;assembly=System.Windows.Controls.WpfPropertyGrid"
+             xmlns:connectors="clr-namespace:Hawk.Core.Connectors;assembly=Hawk.Core"
+
 
              mc:Ignorable="d" 
-             d:DesignHeight="386" d:DesignWidth="637">
+             d:DesignHeight="518" d:DesignWidth="877">
+	<UserControl.Resources>
+		<DataTemplate x:Key="DataTemplate1">
+			<StackPanel Orientation="Horizontal" Width="Auto">
+				<CheckBox   Margin="0" IsChecked="{Binding IsSelected}" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+				<TextBlock TextWrapping="Wrap" Text="名称" VerticalAlignment="Center" Margin="20,0,0,0"/>
+				<TextBox ToolTip="名称" Text="{Binding Name}" Margin="5,0,0,0" TextWrapping="Wrap"   Width="120" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+				<TextBlock TextWrapping="Wrap" Text="XPath" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="20,0,0,0"/>
+				<TextBox ToolTip="XPath" MinWidth="200" Text="{Binding XPath}" Margin="5,0,0,0" TextWrapping="Wrap"   Width="Auto" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+			</StackPanel>
+		</DataTemplate>
+	</UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
@@ -23,17 +37,125 @@
         		<ColumnDefinition Width="0.5*"/>
         		<ColumnDefinition Width="0.5*"/>
         	</Grid.ColumnDefinitions>
-        	<ScrollViewer>
-        		<TextBox Text="{Binding URLHTML}"    ScrollViewer.CanContentScroll="True" TextWrapping="WrapWithOverflow" Margin="20" />
-        	</ScrollViewer>
-            <WindowsFormsHost  Name="windowsFormsHost"   Grid.Column="1" Margin="20" >
-                
-            </WindowsFormsHost>
+        	<TabControl>
+        		<TabItem Header="源码视图">
+        			<TabItem.Background>
+        				<LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
+        					<GradientStop Color="#FFF0F0F0" Offset="0"/>
+        					<GradientStop Color="#00E5E5E5"/>
+        				</LinearGradientBrush>
+        			</TabItem.Background>
+        			<Grid Background="#FFE5E5E5">
+        				<TextBox Text="{Binding URLHTML}" x:FieldModifier="public" x:Name="HTMLTextBox"   ScrollViewer.CanContentScroll="True" TextWrapping="WrapWithOverflow" Margin="0" VerticalScrollBarVisibility="Auto" d:LayoutOverrides="Width, Height" />
+        			</Grid>
+        		</TabItem>
+        		<TabItem Header="浏览器视图">
+        			<TabItem.Background>
+        				<LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
+        					<GradientStop Color="#FFF0F0F0" Offset="0"/>
+        					<GradientStop Color="#00E5E5E5" Offset="1"/>
+        				</LinearGradientBrush>
+        			</TabItem.Background>
+        			<Grid Background="#FFE5E5E5">
+        				<WindowsFormsHost  x:Name="windowsFormsHost" Margin="0" HorizontalAlignment="Right" />
+        			</Grid>
+        		</TabItem>
+        	</TabControl>
             <GridSplitter Width="3.375" Margin="-1.625,0,0,0" Grid.Column="1" HorizontalAlignment="Left"/>
+            <Grid Grid.Column="1">
+            	<Grid.RowDefinitions>
+            		<RowDefinition Height="0.5*"/>
+            		<RowDefinition Height="0.5*"/>
+            	</Grid.RowDefinitions>
+            	<GroupBox Header="属性提取" MinHeight="115" Margin="8,0,8,8.333">
+            		<Grid>
+            			<Grid.ColumnDefinitions>
+            				<ColumnDefinition Width="0.301*"/>
+            				<ColumnDefinition Width="0.699*"/>
+            			</Grid.ColumnDefinitions>
+            			<TextBlock Margin="8,42.5,0,0" TextWrapping="Wrap" Text="搜索字符" VerticalAlignment="Top" HorizontalAlignment="Left"/>
+            			<TextBox Grid.Column="1" Margin="8,42.5,76.759,0" TextWrapping="Wrap" Text="{Binding SelectText}" wpfPropertyGrid:TextBoxExtender.CommitOnEnter="True" VerticalAlignment="Top"/>
+            			<TextBlock Margin="8,78,0,0" TextWrapping="Wrap" HorizontalAlignment="Left" VerticalAlignment="Top"><Run Language="zh-cn" Text="XPath结果"/></TextBlock>
+            			<TextBox Grid.Column="1" Margin="8,76,3.509,0" TextWrapping="Wrap" Text="{Binding SelectXPath, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Height="40.907" VerticalAlignment="Top"/>
+            			<Button   DataContext="{Binding Commands2[0]}"   Content="{Binding Text}" Command="{Binding}" VerticalAlignment="Top" Grid.Column="1" HorizontalAlignment="Right" Width="50.733" Height="20" Margin="0,132.359,3.509,0"/>
+            			<Button  DataContext="{Binding Commands2[1]}"   Content="{Binding Text}" Command="{Binding}"  Margin="0,40.5,3.509,0" VerticalAlignment="Top" Grid.Column="1" Height="20" HorizontalAlignment="Right" Width="50"/>
+            			<TextBlock Margin="8,132.361,0,0" TextWrapping="Wrap" HorizontalAlignment="Left" VerticalAlignment="Top"><Run Language="zh-cn" Text="新增属性"/></TextBlock>
+            			<TextBox Grid.Column="1" Margin="8,132.364,76.759,0" TextWrapping="Wrap" Text="{Binding SelectName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top"/>
+            			<TextBlock Margin="8,8,0,0" TextWrapping="Wrap" Text="工作模式" VerticalAlignment="Top" HorizontalAlignment="Left"/>
+            			<ComboBox Grid.Column="1"  Margin="8,5.01,76.759,0"  ItemsSource="{attributes:EnumValues {x:Type connectors:ScriptWorkMode}}"  SelectedItem="{Binding IsMultiData}" VerticalAlignment="Top"/>
+            		</Grid>
+            	</GroupBox>
+            	<GroupBox Header="已有属性" Margin="8" Grid.Row="1">
+            		<Grid Margin="0,0,0,20">
+            		 <ListView Margin="0,30,0,20" SelectionMode="Single" DataContext="{Binding}"
+				ItemsSource="{Binding CrawlItems}" d:LayoutOverrides="GridBox" >
+
+                <ListView.View>
+                    <GridView>
+                        <GridViewColumn Header="选中">
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <CheckBox IsChecked="{Binding IsSelected}"  HorizontalAlignment="Center" />
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+						 <GridViewColumn Header="名称">
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <TextBox Text="{Binding Name}" HorizontalAlignment="Center" />
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+					<GridViewColumn Header="XPath" Width="200">
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <TextBox Text="{Binding XPath}" HorizontalAlignment="Center" />
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+                                    <GridViewColumn Header="获取策略">
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <ComboBox ItemsSource="{attributes:EnumValues {x:Type connectors:CrawlType}}" SelectedItem="{Binding CrawlType}" HorizontalAlignment="Center" />
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+						  <GridViewColumn Header="启用">
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <CheckBox IsChecked="{Binding IsEnabled}"  HorizontalAlignment="Center" />
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+						  <GridViewColumn Header="样例">
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <TextBlock Text="{Binding SampleData1}"  HorizontalAlignment="Center" />
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+                    </GridView>
+
+                </ListView.View>
+				  
+            </ListView>
+            			<StackPanel VerticalAlignment="Bottom"   DataContext="{Binding CrawlItemCommands}"  HorizontalAlignment="Right" Orientation="Horizontal" Margin="0" d:LayoutOverrides="GridBox">
+    		<Button Style="{DynamicResource miniButton}" DataContext="{Binding [0]}" />
+    		<Button Style="{DynamicResource miniButton}" DataContext="{Binding [1]}" />
+    		<Button Style="{DynamicResource miniButton}" DataContext="{Binding [2]}" />
+    		 	<Button Style="{DynamicResource miniButton}" DataContext="{Binding [3]}" />
+    	</StackPanel>
+            			<TextBlock Margin="6.759,8,0,0" TextWrapping="Wrap" Text="根节点XPath"  ToolTip="当设置该值后，所有属性Path都应该为父节点的子path，而不能是完整的xpath路径" VerticalAlignment="Top" HorizontalAlignment="Left" d:LayoutOverrides="HorizontalAlignment, VerticalAlignment"/>
+            			<TextBox Margin="129.567,8,4.75,0" TextWrapping="Wrap" Text="{Binding RootXPath, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" d:LayoutOverrides="VerticalAlignment"/>       		
+					</Grid>
+					
+            	</GroupBox>
+            	<GridSplitter HorizontalAlignment="Stretch" Margin="0" Height="3" VerticalAlignment="Bottom"/>
+            </Grid>
 
 
         </Grid>
-        <Button Margin="0,10.88,23.5,0" DataContext="{Binding Commands3[1]}"   Content="{Binding Text}" Command="{Binding}" Height="25" VerticalAlignment="Top" Width="50" HorizontalAlignment="Right"/>
+        <Button Margin="0,10.88,23.5,0" DataContext="{Binding Commands2[3]}"   Content="{Binding Text}" Command="{Binding}" Height="25" VerticalAlignment="Top" Width="50" HorizontalAlignment="Right"/>
 
 
     </Grid>
