--- a/Hawk.ETL.Controls/SmartETLUI.xaml
+++ b/Hawk.ETL.Controls/SmartETLUI.xaml
@@ -29,6 +29,9 @@
         					DataContext="{Binding Data.Commands, Source={StaticResource BindingProxy}}">
                             <MenuItem DataContext="{Binding [0]}" Style="{StaticResource CommandMenuItem}" />
                             <MenuItem DataContext="{Binding [1]}" Style="{StaticResource CommandMenuItem}" />
+							 <MenuItem DataContext="{Binding [3]}" Style="{StaticResource CommandMenuItem}" />
+							 	 <MenuItem DataContext="{Binding [4]}" Style="{StaticResource CommandMenuItem}" />
+								 	 <MenuItem DataContext="{Binding [5]}" Style="{StaticResource CommandMenuItem}" />
                         </ContextMenu>
         <Style TargetType="{x:Type ListViewItem}">
             <Setter Property="Foreground" Value="{DynamicResource TextBrush}" />
@@ -344,7 +347,8 @@
                 <RowDefinition Height="25" />
                 <RowDefinition Height="45" />
             </Grid.RowDefinitions>
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Grid.Row="2">
+            <StackPanel HorizontalAlignment="Right" Grid.Row="2" VerticalAlignment="Center" Margin="0,0,10,0">
+                <CheckBox Content="自动刷新" IsChecked="{Binding IsAutoRefresh}" VerticalAlignment="Center" Margin="0,0,0,10" />
                 <CheckBox Content="调试详情" IsChecked="{Binding DisplayDetail}" VerticalAlignment="Center" />
             </StackPanel>
             <Grid Grid.Row="1">
