--- a/Hawk.ETL.Controls/SubTaskView.xaml
+++ b/Hawk.ETL.Controls/SubTaskView.xaml
@@ -5,8 +5,15 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Hawk.ETL.Controls"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="321.5" d:DesignWidth="549">
     <Grid>
+    	<Grid.ColumnDefinitions>
+    		<ColumnDefinition Width="0.274*"/>
+    		<ColumnDefinition Width="0.285*"/>
+    		<ColumnDefinition Width="0.441*"/>
+    	</Grid.ColumnDefinitions>
+    	<TextBlock Margin="8,8,0,0" TextWrapping="Wrap" VerticalAlignment="Top" HorizontalAlignment="Left" Height="34.887"><Run Language="zh-cn" Text="步骤1：设置子任务调用范围"/><LineBreak/><Run Language="zh-cn"/></TextBlock>
+    	<GridSplitter Margin="0,0,-1.611,0" Width="5"/>
             
     </Grid>
 </UserControl>
