--- a/Hawk.Core/Themes/Theme.xaml
+++ b/Hawk.Core/Themes/Theme.xaml
@@ -27,7 +27,12 @@
 
     <Color x:Key="BlackColor">#FF000000</Color>
     <Color x:Key="WhiteColor">#FFFFFFFF</Color>
-
+     <Style x:Key="CommandMenuItem" TargetType="{x:Type MenuItem}">
+            <Setter Property="Header" Value="{Binding Text}" />
+            <Setter Property="Command" Value="{Binding}" />
+            <Setter Property="CommandParameter"
+        		Value="{Binding PlacementTarget.DataContext, RelativeSource={RelativeSource AncestorType={x:Type ContextMenu}, Mode=FindAncestor}}" />
+        </Style>
     <SolidColorBrush x:Key="TextBrush" Color="White" />
     <SolidColorBrush x:Key="NormalBrush" Color="{StaticResource MainColor}" />
     <SolidColorBrush x:Key="NormalBorderBrush" Color="#FF333333" />
